Colocado favicon no link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="shortcut icon" href="./src/imagens/pokebola.ico" type="image/x-icon">
+
     <title>Pokedevs - Semana do Zero ao Programador Contratado</title>
 
     <link rel="stylesheet" href="./src/css/reset.css" />
